tests/negative/test_decl_repeat_name.orb
fnc main() {
    let i32 x, x;
}